2009-12-17  Daniel Macks  <dmacks@netspace.org>

	* ChangeLog.base-files: import ChangeLog from "dpkg-wrappers"
	branch of base-files module
	* inject.pl, install.sh: ...and install it along side ChangeLog

2009-12-17  Daniel Macks  <dmacks@netspace.org>

	* .cvsignore: clean out old-module stuff

2009-12-17  Daniel Macks  <dmacks@netspace.org>

	* inject.pl, install.sh: fix handling of doc files

2009-12-17  Daniel Macks  <dmacks@netspace.org>

	* install.sh: create whole directory hierarchies

2009-12-17  Daniel Macks  <dmacks@netspace.org>

	* VERSION: restart from 0.0
	* base-files.info.in, dpkg-base-files.info.in: renamed to match
	new module-name
	* inject.pl, install.sh, setup.sh: remove base-files remnants,
	adjust module-name

2009-12-17  Daniel Macks  <dmacks@netspace.org>

	* setup.sh: missed one

2009-12-17  Daniel Macks  <dmacks@netspace.org>

	* COPYING, README.buildsystem, VERSION, base-files.info.in,
	inject.pl, install.sh, preinst.in, postinst.in, prerm.in,
	postrm.in, .cvsignore: import from "dpkg-wrappers" branch of
	base-files module